api-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: microservices

spec:
  selector:
    app: api-gateway

  ports:
    - name: http
      port: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: microservices
  labels:
    app: api-gateway

spec:
  replicas: 1

  selector:
    matchLabels:
      app: api-gateway

  template:
    metadata:
      labels:
        app: api-gateway

    spec:
      containers:
        - name: api-gateway
          image: hashicorp/http-echo
          args:
            - "-text=API gateway calling orders-service"
          ports:
            - containerPort: 5678
