frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: microservices

spec:
  selector:
    app: frontend

  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: microservices
  labels:
    app: frontend

spec:
  replicas: 1

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
        - name: frontend
          image: nginx
          ports:
            - containerPort: 80
