frontend-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: frontend-gateway
  namespace: microservices

spec:
  selector:
    istio: ingressgateway # use default Istio ingress gateway

  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: frontend
  namespace: microservices

spec:
  hosts:
    - "*"

  gateways:
    - frontend-gateway

  http:
    - match:
        - uri:
            prefix: /

      route:
        - destination:
            host: frontend.microservices.svc.cluster.local
            port:
              number: 80
